--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="shortcut icon" type="images/favicon.ico" href="/">
     <title>{% block title %}Optimization Assignment{% endblock %}</title>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}"
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +12,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
     <script type="text/javascript" src="static/bootstrap-multiselect.js"></script>
+    <!-- AOS Animations -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body bgcolor=#FFFFFF>
     {% block content %}
@@ -18,5 +21,11 @@
     {% endblock %}
 
 </body>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init({
+
+    });
+</script>
 </html>
 
